add joint table

--- a/code/create_dataset_acc_indices.ipynb
+++ b/code/create_dataset_acc_indices.ipynb
@@ -581,10 +581,17 @@
     "gpuClass": "standard",
     "kernelspec": {
       "display_name": "Python 3",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "name": "python",
+      "version": "3.10.10"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "2c4942a159f4d5aef3ee417b2496c4987664cccd18376e4758d26fa90466618f"
+      }
     }
   },
   "nbformat": 4,
