add feature mse plot

--- a/code/stats_regression.ipynb
+++ b/code/stats_regression.ipynb
@@ -743,6 +743,34 @@
         "\n",
         "plt.show()"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "vscode": {
+          "languageId": "python"
+        }
+      },
+      "outputs": [],
+      "source": [
+        "# Plot the MSE for each feature as a bar chart with the feature name as the label\n",
+        "fig, ax = plt.subplots(figsize=(10, 5))\n",
+        "y_pred_test = forest_regressor.predict(X_test)\n",
+        "feature_names = regression.columns[1:]\n",
+        "for i in range(y_test.shape[1]):\n",
+        "  mse_test = mean_squared_error(y_test[:, i], y_pred_test[:, i])\n",
+        "  ax.bar(feature_names[i], mse_test)\n",
+        "\n",
+        "# Add some text for labels, title and custom x-axis tick labels, etc.\n",
+        "ax.set_ylabel('MSE')\n",
+        "ax.set_title('MSE by feature')\n",
+        "ax.set_xticklabels(feature_names, rotation=90)\n",
+        "\n",
+        "fig.tight_layout()\n",
+        "\n",
+        "plt.show()"
+      ]
     }
   ],
   "metadata": {
