add regression features + update stats_regression

--- a/code/stats_regression.ipynb
+++ b/code/stats_regression.ipynb
@@ -650,6 +650,24 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "vscode": {
+          "languageId": "python"
+        }
+      },
+      "outputs": [],
+      "source": [
+        "# Round the predictions TFV_G11_GROUP feature\n",
+        "y_pred_test[:, cat_idx] = np.round(y_pred_test[:, cat_idx])\n",
+        "\n",
+        "# Compute accuracy for TFV_G11_GROUP feature\n",
+        "accuracy = np.mean(y_test[:, cat_idx] == y_pred_test[:, cat_idx])\n",
+        "print('TFV_G11_GROUP -- Accuracy:', accuracy)"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": 33,
       "metadata": {
         "id": "sd6IipwMnA3A",
@@ -770,6 +788,72 @@
         "fig.tight_layout()\n",
         "\n",
         "plt.show()"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Interpreting the results"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "vscode": {
+          "languageId": "python"
+        }
+      },
+      "outputs": [],
+      "source": [
+        "from sklearn.metrics import mean_absolute_error\n",
+        "y_pred_test = forest_regressor.predict(X_test)\n",
+        "y_pred_test[:,y_pred_test] = int(y_pred_test[:,y_pred_test])\n",
+        "# Print for each feature the min, max, mean, standard deviation and the mae on the test set\n",
+        "for i in range(len(regression.columns[1:])):\n",
+        "    print('Feature:', regression.columns[i+1])\n",
+        "    print('Min:', X_test[:, i].min())\n",
+        "    print('Max:', X_test[:, i].max())\n",
+        "    print('Mean:', X_test[:, i].mean())\n",
+        "    print('Standard deviation:', X_test[:, i].std())\n",
+        "    print('MAE:', mean_absolute_error(y_test[:,i], y_pred_test[:,i]))\n",
+        "    # Compute the MAPE for non-zero values\n",
+        "    non_zero = np.where(y_test[:,i] != 0)\n",
+        "    mape = np.mean(np.abs((y_test[non_zero, i] - y_pred_test[non_zero, i]) / y_test[non_zero, i])) * 100\n",
+        "    #print('MAPE:', mape)\n",
+        "    print(\"-------------\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "vscode": {
+          "languageId": "python"
+        }
+      },
+      "outputs": [],
+      "source": [
+        "feature_names = regression.columns[1:]\n",
+        "for i in range(len(feature_names)):\n",
+        "    feature = feature_names[i]\n",
+        "    min = y_test[:, i].min()\n",
+        "    max = y_test[:, i].max()\n",
+        "    mean = y_test[:, i].mean()\n",
+        "    std = X_test[:, i].std()\n",
+        "    mae = mean_absolute_error(y_test[:, i], y_pred_test[:, i])\n",
+        "    # For each feature plot the mae and others as horizontal lines (label them)\n",
+        "    plt.figure(figsize=(10, 5))\n",
+        "    plt.axhline(y=mae, color='k', linestyle='--', label='MAE -- ' + feature, linewidth=2)\n",
+        "    plt.axhline(y=min, color='r', linestyle='-', label='Min')\n",
+        "    plt.axhline(y=max, color='g', linestyle='-', label='Max')\n",
+        "    plt.axhline(y=mean, color='b', linestyle='-', label='Mean')\n",
+        "    plt.text(0.5, mae + 2*mae, str(round(mae, 2)), horizontalalignment='center', verticalalignment='center')\n",
+        "    plt.legend()\n",
+        "    fig.tight_layout()\n",
+        "    ax.grid(True)"
       ]
     }
   ],
